# LPGPU2-CodeXL

./: .gitignore  BUILD.md  LICENSE  README.md
CodeXL/: CodeXL.files  CodeXL.includes  SConstruct
CodeXL/AMDTApplicationFramework/: AMDTApplicationFramework.vcxproj  AMDTApplicationFramework.vcxproj.filters  SConscript
CodeXL/AMDTApplicationFramework/Include/: LPGPU2ApplicationDefs.h  afAppStringConstants.h  afApplicationCommands.h  afCSSSettings.h  afCloseProjectCommand.h  afCommandIds.h  afDeviceInformationCollector.h  afEnumerations.h  afIExecutionMode.h  afNewProjectDialog.h  afProgressBarWrapper.h  afProjectManager.h  afProjectSettingsExtension.h  afTreeItemType.h  afViewCreatorAbstract.h
CodeXL/AMDTApplicationFramework/commands/: afSystemInformationCommand.cpp
CodeXL/AMDTApplicationFramework/dialogs/: afHelpAboutDialog.cpp  (+1 more)
CodeXL/AllProjectsBuild/: AMDTPowerProfiling.props  CodeXL-AllProjects.sln  CopyFiles_AnyConfiguration.bat  CopyFiles_Debug.bat  CopyFiles_Release.bat  LPGPU2_CCVGCodeCoverage.props  UpgradeLog.htm
CodeXL/App/: AMDCodeXL.vcxproj  AMDCodeXL.vcxproj.filters  CodeXL.natvis
CodeXL/Help/: CodeXLFooter.html
CodeXL/Installer-Linux/: CXL-package.sh
Common/Src/lua/: SConscript  (+3 more)
Tools/: README.md  buildv3.py  env-android.sh
Tools/api-shim/: Readme.md  build-android-interposer.sh  env-android-studio.sh  generate-api.sh
Tools/test/ReplayNative/Replay/src/main/cpp/: AppRenderer.cpp  AppRenderer.h  CMakeLists.txt  Carousel.cpp  Correctness.cpp  Hypercube.cpp  LowPower.cpp  Menger.cpp  Overdraw.cpp  OverdrawModern.cpp  OverdrawTex.cpp  ProfilingNDK.h  ProfilingNativeActivity.cpp  Raymarching.cpp  RaymarchingOLT.cpp  ShaderAsm.cpp  ShaderAsm.hpp  Simple.cpp  Thrasher.hpp  Throttle.hpp  Triangle1.cpp  lpgpu2_api.h  shim2ify.h
Tools/test/VulkanApps/app/: CMakeLists.txt  build.gradle
Tools/test/VulkanApps/app/src/androidTest/java/org/lpgpu/vulkanapps/: ExampleInstrumentedTest.java
Tools/test/VulkanApps/app/src/main/: AndroidManifest.xml
Tools/test/VulkanApps/app/src/main/assets/: cube_data.h
Tools/test/VulkanApps/app/src/main/assets/Shaders/Correctness/: Correctness.vert
Tools/test/VulkanApps/app/src/main/assets/Shaders/DrawTexCube/: DrawTexCube.frag  DrawTexCube.vert
Tools/test/VulkanApps/app/src/main/assets/Shaders/Globe/: Cloud.frag  Cloud.vert  Earth.frag  Earth.vert  Stars.frag  Stars.vert
Tools/test/VulkanApps/app/src/main/assets/Shaders/Hypercube/: Hypercube.frag  Hypercube.vert
Tools/test/VulkanApps/app/src/main/assets/Shaders/Menger/: Menger.frag  Menger.vert
Tools/test/VulkanApps/app/src/main/assets/Shaders/Overdraw/: Overdraw.frag  Overdraw.frag.works  Overdraw.vert
Tools/test/VulkanApps/app/src/main/assets/Shaders/OverdrawTex/: OverdrawTex.frag  OverdrawTex.vert
Tools/test/VulkanApps/app/src/main/assets/Shaders/Raymarching/: Raymarching.frag  Raymarching.vert
Tools/test/VulkanApps/app/src/main/assets/Shaders/Triangle/: Triangle.frag
Tools/test/VulkanApps/app/src/main/cpp/: instance.hpp  native-lib.cpp  shim2ify.h  tinyxml2.h
Tools/test/VulkanApps/app/src/main/cpp/apps/: App.cpp  App.hpp  Buffers.hpp  Carousel.hpp  Correctness.hpp  DrawTexCube.hpp  Globe.hpp  Hypercube.hpp  Menger.hpp  Overdraw.hpp  OverdrawTex.hpp  Raymarching.hpp  Triangle.hpp
Tools/test/VulkanApps/app/src/main/cpp/utils/: samples_platform.h  util.cpp  util.hpp  util_init.cpp  util_init.hpp
Tools/test/VulkanApps/app/src/main/cpp/utils/glm/: common.hpp  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
Tools/test/VulkanApps/app/src/main/cpp/utils/glm/detail/: _features.hpp  _fixes.hpp  _literals.hpp  _noise.hpp  _swizzle.hpp  _swizzle_func.hpp  _vectorize.hpp  dummy.cpp  func_common.hpp  func_exponential.hpp  func_geometric.hpp  func_integer.hpp  func_matrix.hpp  func_noise.hpp  func_packing.hpp  func_trigonometric.hpp  func_vector_relational.hpp  glm.cpp  hint.hpp  intrinsic_common.hpp  intrinsic_exponential.hpp  intrinsic_geometric.hpp  intrinsic_integer.hpp  intrinsic_matrix.hpp  intrinsic_trigonometric.hpp  intrinsic_vector_relational.hpp  precision.hpp  setup.hpp  type_float.hpp  type_gentype.hpp  type_half.hpp  type_int.hpp  type_mat.hpp  type_mat2x2.hpp  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x2.hpp  type_mat3x3.hpp  type_mat3x4.hpp  type_mat4x2.hpp  (+7 more)
Tools/test/VulkanApps/app/src/main/cpp/utils/glm/gtc/: constants.hpp  epsilon.hpp  matrix_access.hpp  matrix_integer.hpp  matrix_inverse.hpp  matrix_transform.hpp  noise.hpp  packing.hpp  quaternion.hpp  random.hpp  reciprocal.hpp  type_precision.hpp  type_ptr.hpp  ulp.hpp
Tools/test/VulkanApps/app/src/main/cpp/utils/glm/gtx/: associated_min_max.hpp  bit.hpp  closest_point.hpp  color_space.hpp  color_space_YCoCg.hpp  compatibility.hpp  component_wise.hpp  constants.hpp  dual_quaternion.hpp  epsilon.hpp  euler_angles.hpp  extend.hpp  extented_min_max.hpp  fast_exponential.hpp  fast_square_root.hpp  fast_trigonometry.hpp  gradient_paint.hpp  handed_coordinate_space.hpp  inertia.hpp  int_10_10_10_2.hpp  integer.hpp  intersect.hpp  io.hpp  log_base.hpp  matrix_cross_product.hpp  matrix_interpolation.hpp  matrix_major_storage.hpp  matrix_operation.hpp  matrix_query.hpp  matrix_transform_2d.hpp  mixed_product.hpp  multiple.hpp  noise.hpp  norm.hpp  normal.hpp  normalize_dot.hpp  number_precision.hpp  optimum_pow.hpp  orthonormalize.hpp  perpendicular.hpp  (+23 more)
Tools/test/VulkanApps/app/src/main/cpp/utils/glm/virtrev/: xstream.hpp
Tools/test/VulkanApps/app/src/main/cpp/vulkan_wrapper/: vulkan_wrapper.cpp  vulkan_wrapper.h
Tools/test/VulkanApps/app/src/main/java/org/lpgpu/vulkanapps/: LPGPU2DataPacket.java  LPGPU2RMessengerInterface.java  ShimActivity.java  VulkanActivity.java  VulkanActivity.java-Khr  VulkanActivity.java-SW
Tools/test/VulkanApps/app/src/main/res/values/: strings.xml
Tools/test/VulkanApps/app/src/test/java/org/lpgpu/vulkanapps/: ExampleUnitTest.java
(+1104 files in other folders)
